// Copyright 2020-2026 The streamIO Authors
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/akzj/streamIO/proto;proto";
package proto;

message StreamInfoItem {
  int64 stream_id = 1;
  string name = 2;
  int64 stream_server_id = 3;
}

message MetaDataItem {
  int32 key = 1;
  int64 next_stream_id = 2;
}

message SSOffsetItem{
  int64 session_id = 1;
  int64 stream_id = 2;
  int64 offset = 3;
}


message ServerInfoBase{
  int64 id = 1;
  bool leader = 2;
  string addr = 3;
}

message StreamServerInfoItem{
  ServerInfoBase base = 1;
}

message MetaServerInfoItem {
  ServerInfoBase base = 1;
}

message StreamServerHeartbeatItem{
  ServerInfoBase Base = 1;
  google.protobuf.Timestamp Timestamp = 2;
}


message MQTTSessionItem {
  StreamInfoItem  Qos1_stream_info = 1;
  StreamInfoItem Qos0_stream_info = 2;
  int64 session_id = 3;
  string client_identifier = 4;
  int64 create_ts = 5;
  int64 access_ts = 6;
  map<string, int32> topics = 7;
}